home-launcher: Avoid showing app list from shelf in overview mode

Swiping up from shelf in overview mode will show the launcher. This
change avoids such action.

BUG=832991

Change-Id: I556a6ffd7d73718695dcb8c17b473dab9142876a
Reviewed-on: https://chromium-review.googlesource.com/1018147
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552074}
Former-commit-id: 635c812a7e4c3e2b1d46546aa250444442461e47